Fixed the look of markdown text in single posts (more space, more contrast)

--- a/src/app/assets/stylesheets/_variables.scss
+++ b/src/app/assets/stylesheets/_variables.scss
@@ -30,6 +30,7 @@ $color-text-darker: #202020;
 $color-text-white: #fcfcfc;
 $color-text-blue: #004EFF;
 $color-text-gray: #788187;
+$color-text-gray-darker: #5e656a;
 $color-text-gray-light: #A6B2BA;
 $color-text-teal: #1FBF8F;
 $color-text-red: $color-red;
